--- a/skript/anwendungen.tex
+++ b/skript/anwendungen.tex
@@ -1,4 +1,4 @@
-\chapter*{Einf"uhrung}
+\chapter*{"Ubersicht}
 Im zweiten Teil werden Anwendungsbeispiele aus der HPC-Welt gezeigt.
 Eigentliche rechnerische L"osungen stehen hier neben mathematischen
 "Uberlegungen, wie man ein Problem der L"osung mit leistungsf"ahiger
@@ -13,7 +13,7 @@ Computertomographen aus den Rohdaten Bilder entstehen zu lassen.
 
 {\em Nicol\'as Rom\'an L"uthold} und {\em Flavio La Morea}
 wagen sich an das Problem,
-eingen Kugelsternhaufen zu simulieren. Das Problem ist nicht einfach,
+einen Kugelsternhaufen zu simulieren. Das Problem ist nicht einfach,
 w"achst doch der Simulationsaufwand mit der dritten Potenz der Anzahl
 der Sterne.
 Es gelingt ihnen, trotz dieser widrigen Umst"ande, ein Video der Dynamik
@@ -45,7 +45,7 @@ solche Simulationen in einer OpenCL Anwendung bekommen kann.
 {\em Daniel Monti} und {\em Pascal Stump} haben versucht, das Konzept
 von Map-Reduce auf die Berechnung des Eigenvektors zum Eigenwert $1$
 einer Wahrscheinlichkeitsmatrix zu adaptieren. Sie haben dazu eine eigene,
-parallesierbare Version des Potenzalgorithmus gefunden.
+parallelisierbare Version des Potenzalgorithmus gefunden.
 
 {\em Felix Hofer} zeigt, wie Successive Overrelaxation die
 Konvergenz eines iterativen Verfahrens zur L"osung linearer Gleichungen
@@ -68,7 +68,8 @@ Modelle zum Beispiel in der numerischen Wetterprognose lernen.
 
 Damit schliesst sich der Kreis der Awendungen. Lewis Fry Richardson hat
 sich vor ziemlich genau hundert Jahren eine Methode zur Berechnung der
-Wetterentwicklung ausgedacht. Zu deren Durchf"uhrung stellte er sich
+Wetterentwicklung ausgedacht \cite{skript:richardson}.
+Zu deren Durchf"uhrung stellte er sich
 eine {\em Forecast Fatory} vor (Abbildung~\ref{forecastfactory}),
 ein riesiges, theaterartiges Geb"aude,
 wo viele Computer, also Arbeiter mit mechanischen Rechenmaschinen an der
