--- a/skript/references.bib
+++ b/skript/references.bib
@@ -51,3 +51,19 @@
 	url = {https://www.youtube.com/watch?v=RKyhHonQMbw},
 	urldate = {2014-05-12}
 }
+
+@book{skript:linalg,
+	author = {Andreas M"uller},
+	title = {Lineare Algebra},
+	subtitle = {Skript zur Vorlesung an der HSR},
+	year = {2013},
+	language = {german}
+}
+
+@book{skript:richardson,
+	author = {Peter Lynch},
+	title = {The Emergence of Numerical Weather Prediction: Richardson's dream},
+	language = {english},
+	year = {2006},
+	publisher = {Cambridge University Press}
+}
